# cursor-bark

./: README.md  config.example.json  pyproject.toml
CursorBark/: Package.swift
CursorBark/.build/: build.db  debug.yaml  plugin-tools.yaml
CursorBark/.build/x86_64-apple-macosx/debug/: CursorBark  description.json
CursorBark/.build/x86_64-apple-macosx/release/: CursorBark  description.json  swift-version--1AB21518FC5DEDBE.txt
CursorBark/Sources/CursorBark/: AppModel.swift  CursorBarkApp.swift
CursorBark/Sources/CursorBark/Models/: AgentEvent.swift  AppConfig.swift  ConversationItem.swift
CursorBark/Sources/CursorBark/Services/: BarkClient.swift  DesktopWidgetManager.swift  ExtensionBridgeClient.swift  LaunchAtLogin.swift  LocalNotifier.swift  SharedProgressStore.swift
CursorBark/Sources/CursorBark/Views/: ConversationsPanelView.swift  DashboardPanelView.swift  MainDashboardView.swift  MenuBarStatusView.swift  SettingsView.swift  WidgetsPanelView.swift
cursor_bark/: __init__.py  __main__.py  bark.py  config.py  daemon.py  events.py  notify_macos.py  server.py  watcher.py
extension/: LICENSE  README.md  cursor-bark-bridge-0.1.0.vsix  cursor-bark-bridge-0.1.1.vsix  cursor-bark-bridge-0.1.2.vsix  cursor-bark-bridge-0.1.3.vsix  package-lock.json  package.json
extension/src/: composerMeta.ts  extension.ts  hookInstaller.ts  statusServer.ts  statusTracker.ts
hooks/: hooks.json.example  stop.sh  subagent_stop.sh
scripts/: install-extension.sh  install_hooks.sh  install_launchagent.sh  package-extension.sh  package-macos-app.sh
(+798 files in other folders)
