[project]
name = "cursor-bark"
version = "0.1.0"
description = "Monitor Cursor agent progress and notify via Bark on macOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "watchdog>=4.0.0",
]

[project.scripts]
cursor-bark = "cursor_bark.daemon:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cursor_bark*"]
